<resources>
    <string name="app_name">calculator</string>
    <string name="add">Add</string>
    <string name="subtract">Subtract</string>
    <string name="multiply">Multiply</string>
    <string name="divider">divider</string>
    <string name="create_by_victor">Create By Victor</string>
    <string name="number_1">Number 1</string>
    <string name="number_2">Number 2</string>
    <string name="sign_in_for_calculator">Sign in for Calculator</string>
    <string name="enter_username">Enter UserName</string>
    <string name="enter_password">String</string>
    <string name="submit">Submit</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
</resources>